--- a/web/package.json
+++ b/web/package.json
@@ -37,7 +37,8 @@
     "redaxios": "^0.5.1",
     "ronin": "^4.4.1",
     "tailwind-merge": "^2.5.4",
-    "vinxi": "0.4.3"
+    "vinxi": "0.4.3",
+    "vite-plugin-node-polyfills": "^0.22.0"
   },
   "devDependencies": {
     "@types/node": "^22.9.0",
